--- a/RC-Core/pom.xml
+++ b/RC-Core/pom.xml
@@ -82,6 +82,16 @@
         <version>6.0.53</version>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+        <version>2.13.3</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+        <version>2.13.3</version>
+    </dependency>
   </dependencies>
 
   <properties>
