--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>Triton</groupId>
-  <artifactId>RC-Core</artifactId>
+  <artifactId>TritonSoccerAI</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>RC-Core</name>
+  <name>TritonSoccerAI</name>
   <url>http://maven.apache.org</url>
 
   <dependencies>
