--- a/pom.xml
+++ b/pom.xml
@@ -72,22 +72,22 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>2.9.10.7</version>
+      <version>2.12.2</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-jaxb-annotations</artifactId>
-      <version>2.0.6</version>
+      <version>2.12.2</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
-      <version>2.3.0</version>
+      <version>2.12.2</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-annotations</artifactId>
-      <version>2.3.0</version>
+      <version>2.12.2</version>
     </dependency>
 
     <!-- grpc -->
@@ -199,7 +199,7 @@
         <version>9.4.31.v20200723</version>
       </plugin>
 
-      <!-- protobuff plugin -->
+      <!-- protobuf plugin -->
       <plugin>
         <groupId>org.xolstice.maven.plugins</groupId>
         <artifactId>protobuf-maven-plugin</artifactId>
@@ -208,16 +208,40 @@
           <protocArtifact>com.google.protobuf:protoc:3.11.4:exe:${os.detected.classifier}</protocArtifact>
           <pluginId>grpc-java</pluginId>
           <pluginArtifact>io.grpc:protoc-gen-grpc-java:1.29.0:exe:${os.detected.classifier}</pluginArtifact>
+          <protoSourceRoot>src/main/proto</protoSourceRoot>
+          <outputDirectory>src/main/generated-sources</outputDirectory>
         </configuration>
         <executions>
           <execution>
             <goals>
               <goal>compile</goal>
-              <goal>compile-custom</goal>
+              <goal>test-compile</goal>
             </goals>
           </execution>
         </executions>
       </plugin>
+
+      <!-- json schema plugin -->
+      <plugin>
+        <groupId>org.jsonschema2pojo</groupId>
+        <artifactId>jsonschema2pojo-maven-plugin</artifactId>
+        <version>1.1.0</version>
+        <configuration>
+          <sourceDirectory>config</sourceDirectory>
+          <outputDirectory>src/main/generated-sources</outputDirectory>
+          <targetPackage>Triton.Config</targetPackage>
+          <sourceType>json</sourceType>
+          <includeConstructors>true</includeConstructors>
+        </configuration>
+        <executions>
+          <execution>
+            <goals>
+              <goal>generate</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
 
   </build>
