--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <name>TritonSoccerAI</name>
   <url>http://maven.apache.org</url>
 
+
   <dependencies>
     <!-- Java Tuples -->
     <dependency>
@@ -141,6 +142,7 @@
       <artifactId>commons-math3</artifactId>
       <version>3.6.1</version>
     </dependency>
+
     <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
     <dependency>
       <groupId>org.projectlombok</groupId>
@@ -149,6 +151,12 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.ini4j/ini4j -->
+    <dependency>
+      <groupId>org.ini4j</groupId>
+      <artifactId>ini4j</artifactId>
+      <version>0.5.4</version>
+    </dependency>
 
   </dependencies>
 
