--- a/src/main/java/Triton/Legacy/OldGrSimProto/Makefile
+++ b/src/main/java/Triton/Legacy/OldGrSimProto/Makefile
@@ -1,5 +1,6 @@
 protosrc:
 	rm -rf protosrcs/*.java
+	mkdir protosrcs
 	protoc -I=proto --java_out=protosrcs proto/*.proto
 	sed -i '1s/^/package Triton.Legacy.OldGrSimProto.protosrcs; /' protosrcs/*.java
 
