apply better config & cli arg scheme

--- a/ini/Setups/DevelopmentSetups/virtual-grsim-6v6.ini
+++ b/ini/Setups/DevelopmentSetups/virtual-grsim-6v6.ini
@@ -1,26 +1,25 @@
-[imported-configs]
-robot-config = /ini/RobotConfig/triton-2021-grsim.ini
-
 [basic-info]
+type = main-setup
 scenario = development
 environment = grsim
-num-robots = 6
 
 [ssl-vision]
 ; grSim's vision udp multicast
-vision-mc-addr = 224.5.23.2
-vision-mc-port = 10020
+mc-addr = 224.5.23.2
+mc-port = 10020
 
 [ssl-game-controller]
 ; ssl game controller udp multicast
-gc-mc-addr = 224.5.23.2
-gc-mc-port = 10003
+mc-addr = 224.5.23.2
+mc-port = 10003
 
 
 [robot-connections]
+num-robots = 6
+
 ; port base number is used to determine the port number for each robot by adding an offset
-robot-port-base = 6000
-id-base-offset = 100;
+robot-port-base = 5000
+id-base-offset = 100
 tritonbot-tcp-port-offset = 0
 tritonbot-udp-port-offset = 1
 virtual-robot-tcp-port-offset = 2
