Working on fixing bug with addRobotCommands

--- a/example-mainsetup.ini
+++ b/example-mainsetup.ini
@@ -8,6 +8,10 @@ environment = grsim
 mc-addr = 224.5.23.2
 mc-port = 10020
 
+[simulator]
+cmd-addr = 127.0.0.1
+cmd-port = 20011
+
 [ssl-game-controller]
 ; ssl game controller udp multicast
 mc-addr = 224.5.23.2
