fixed a trivial bug

--- a/example-mainsetup.ini
+++ b/example-mainsetup.ini
@@ -8,7 +8,8 @@ environment = grsim
 mc-addr = 224.5.23.2
 mc-port = 10020
 
-[simulator]
+[simulator-console]
+; grSim's console udp endpoint
 cmd-addr = 127.0.0.1
 cmd-port = 20011
 
