Repetitive virtual bot instantiation leading to occupied socket???

--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,13 @@
       <version>4.6.1</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>30.1.1-jre</version>
+    </dependency>
+
   </dependencies>
 
   <properties>
